# ispc

./: .gitignore  ispc.cabal  shell.nix
app/: main.hs
src/Language/: ISPC.hs
