name: ispc
version: 0
cabal-version: >= 1.10
build-type: Simple

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Language.ISPC

  build-depends:
    base,
    process,
    random,
    template-haskell

executable mandelbrot
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: main.hs
  build-depends:
    base,
    ispc,
    JuicyPixels,
    string-qq
